--- a/myfeifei/src/components/footer/footer.css
+++ b/myfeifei/src/components/footer/footer.css
@@ -4,7 +4,9 @@
     display: flex;
     justify-content: space-between;
     position: fixed;
+    /* background: red; */
     bottom: 0;
+    border-top: 1px solid #ccc;
 }
 .footer>li{
     width: 100%;
@@ -12,8 +14,17 @@
     text-align: center;
 }
 .footer>li>a{
+    width: 100%;
+    height: 100%;
     color: #acacac;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+}
+.footer>li>a>i{
+    font-size: .4rem;
 }
 .footer>li>.active{
-    color:#121212;
+    color:#ff5181;
 }
