--- a/myfeifei/src/style/classify/header.css
+++ b/myfeifei/src/style/classify/header.css
@@ -1,10 +1,44 @@
+.classify{
+    width: 7.5rem;
+    height: 13.34rem;
+    position: relative;
+}
 .header{
     width: 100%;
     height: .77rem;
-    background: pink;
+    background: #efefef;
     display: flex;
     justify-content: space-between;
+    padding: 0 .32rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #333;
 }
-.header>p{
+.header>i{
+    font-size: .36rem;
+    
+}
+.header>div{
+    flex: 1;
+    border-radius: .4rem;
+    height: .5rem;
+    background: #fff;
+    position: relative;
+    margin: 0 .2rem;
+}
+.header>div>input{
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: .4rem;
+    padding-left: .45rem;
     font-size: .24rem;
+}
+.header>div>i{
+    position: absolute;
+    font-size: .36rem;
+    left: .05rem;
+    top: .09rem;
+    
 }
