--- a/myfeifei/src/components/footer/footer.css
+++ b/myfeifei/src/components/footer/footer.css
@@ -1,12 +1,13 @@
 .footer{
     width: 100%;
-    height: .88rem;
+    height: .98rem;
     display: flex;
     justify-content: space-between;
     position: fixed;
-    /* background: red; */
+    background: #fff;
     bottom: 0;
     border-top: 1px solid #ccc;
+    box-shadow:.05rem .02rem .06rem #000; 
 }
 .footer>li{
     width: 100%;
@@ -23,7 +24,7 @@
     /* align-items: center; */
 }
 .footer>li>a>i{
-    font-size: .4rem;
+    font-size: .5rem;
 }
 .footer>li>.active{
     color:#ff5181;
