--- a/myfeifei/src/style/classify/content.css
+++ b/myfeifei/src/style/classify/content.css
@@ -1,6 +1,61 @@
-.content{
-    width: 5rem;
+.wrapper{
     height: 100%;
-    background: orange;
+    display: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 5.4rem;
+    overflow:hidden;
     float: right;
+}
+.content_parent{
+    /* overflow: auto; */
+    height: auto;
+}
+.content{
+    width: 100%;
+    height: auto;
+    
+}
+.content>h3{
+    width: 100%;
+    height: .6rem;
+    line-height: .6rem;
+}
+.content>ul{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background: #fff;
+    padding-top: .2rem;
+
+}
+.content>ul>li{
+    width: 30%;
+    height: auto;
+}
+.content>ul>li>a{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content>ul>li p{
+    width: 100%;
+    height: 1.36rem;
+    padding: 0 .15rem;
+}
+.content>ul>li p>img{
+    width: 1.36rem;
+    height: 1.36rem;
+    
+}
+.content>ul>li span{
+    width: 100%;
+    height: .8rem;
+    line-height: .8rem;
+    text-align: center;
 }
