--- a/myfeifei/src/style/classify/header.css
+++ b/myfeifei/src/style/classify/header.css
@@ -2,11 +2,12 @@
     width: 7.5rem;
     height: 13.34rem;
     position: relative;
+    background: #efefef;
 }
 .header{
     width: 100%;
     height: .77rem;
-    background: #efefef;
+   
     display: flex;
     justify-content: space-between;
     padding: 0 .32rem;
@@ -14,16 +15,19 @@
     justify-content: space-between;
     align-items: center;
     color: #333;
+    border-bottom: .01rem solid #999;
 }
 .header>i{
-    font-size: .36rem;
-    
+    font-size: .36rem; 
+}
+.header .colorWhite{
+    color: #fff;
 }
 .header>div{
     flex: 1;
     border-radius: .4rem;
     height: .5rem;
-    background: #fff;
+    opacity: .7;
     position: relative;
     margin: 0 .2rem;
 }
