--- a/myfeifei/src/style/classify/navs.css
+++ b/myfeifei/src/style/classify/navs.css
@@ -1,6 +1,31 @@
 .navs{
-    width: 1.6rem;
+    width: 1.8rem;
     height: 100%;
-    background: pink;
+    background: #fff;
     float: left;
+    margin-top: .03rem;
+}
+.navs>ul{
+    width: 100%;
+    height: 100%;
+}
+.navs>ul>li{
+    width: 100%;
+    height: .9rem;
+    display: flex;
+    justify-content: center;
+    line-height: .9rem;
+    border-bottom: .01rem solid #ccc;
+}
+.navs>ul>.active{
+    color: #ED5564;
+}
+.navs>ul>li>span{
+    display: block;
+    width: 70%;
+    height: .7rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
 }
