--- a/myfeifei/src/style/classify/rightNav.css
+++ b/myfeifei/src/style/classify/rightNav.css
@@ -1,12 +1,11 @@
 .rightNav{
     width: 2.2rem;
-    /* height: 30px; */
-   
     position: absolute;
     right: .1rem;
     top: .82rem;
     color: #fff;
-    border-radius: .2rem;
+    z-index: 1;
+   
 }
 .rightNav>span{
     display: block;
@@ -34,7 +33,8 @@
     padding: 0 .2rem;
 }
 .rightNav>ul>li>i{
-    font-size: .26rem;
+    font-size: .34rem;
+    
 }
 .rightNav>ul>li>a{
     color: #fff;
